Console filter accessibility fix
Currently changing any filter in console, screen reader is reading the entire contents of console messages. Instead this CL adds a count of messages which is only read when filter is changed. This behavior is more suitable for users who use screen readers. This CL adds a new message count element which is hidden by setting width and height to 0px.

Example gif: https://i.imgur.com/FvU3Huh.gif

Bug:1227119

--- a/front_end/panels/console/consoleView.css
+++ b/front_end/panels/console/consoleView.css
@@ -451,6 +451,11 @@
   max-height: 50%;
 }
 
+.message-count {
+  width: 0;
+  height: 0;
+}
+
 @media (forced-colors: active) {
   .console-message-expand-icon,
   .console-warning-level [is=ui-icon].icon-mask.expand-group-icon {
